<resources>
    <string name="app_name">Kendagor Bank of Africa</string>
    <string name="app_pass">***********</string>
    <string name="user">User Name</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_admin">Login As Admin</string>
    <string name="btn_fg">Forgot Password</string>
    <string name="sign_btn">Sign Up</string>
    <string name="lg_btn">Login</string>
    <string name="app_id">user id</string>
    <string name="app_peer">Welcome to Kendagor Bank of Africa</string>
    <string name="app_no">+254798877676</string>
    <string name="pass">Password</string>
    <string name="pass_conf">Confirm Password</string>
    <string name="btn_female">Female</string>
    <string name="btn_male">Male</string>
    <string name="email">yourusername@gmail.com</string>
    <string name="btn_save">Save</string>
    <string name="app_full">Full Name</string>
    <string name="app_admin">Admin Name</string>
    <string name="app_new">New Password</string>
    <string name="conf_new">Confirm New Password</string>
    <string name="debt">Total Amount to Pay</string>
    <string name="weeks">No of weeks to pay</string>
    <string name="loanCalculator">Loan Amount</string>
    <string name="btn_invest">Invest</string>
    <string name="app_repay">Amount to be Repaid</string>
    <string name="app_apply">Apply</string>
    <string name="approve">Approve Loans</string>
    <string name="students">Check Students Details</string>
    <string name="app_lo">Check For Loanees</string>
    <string name="Invest_Amount">Amount To Invest</string>
    <string name="admin_id">Admin Id</string>
    <string name="btn_proceed_invest">btn_proceed_invest</string>
    <string name="proceed_to_invest">proceed to invest</string>


    <!-- Strings related to login -->
    <string name="title_register">Customer Registration</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Alfred Mutua</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="sectors_array">
        <item>Retail</item>
        <item>Transport</item>
        <item>Construction</item>
        <item>Agriculture</item>
        <item>Manufacturing</item>
        <item>Mining</item>
        <item>Services</item>
        <item>Govt and NGO</item>
    </string-array>
    <string-array name="collateral_array">
        <item>Motor Vehicle</item>
        <item>Household Goods</item>
        <item>Property</item>
    </string-array>
    <string name="title_activity_start_tab">Kendagor Bank Capitals</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="reset_button">Reset</string>

</resources>
