<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/relative"
    tools:context="com.alfredtechsystems.myapplication2.home_user">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_peer" />

    <EditText
        android:id="@+id/editText_loan_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/loanCalculator"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText_apply_weeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_loan_amount"
        android:layout_below="@+id/editText_loan_amount"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/weeks"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_centerVertical="true"
        android:text="@string/app_apply" />

    <TextView
        android:id="@+id/amount_topay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_invest"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:hint="@string/debt" />


    <Button
        android:id="@+id/button_invest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/amount_topay"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="15dp"
        android:text="@string/proceed_to_invest"
        android:hint="@string/proceed_to_invest" />
</RelativeLayout>
