<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alfredtechsystems.myapplication2.reset_password">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/app_peer" />

    <EditText
        android:id="@+id/editText_newpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/app_new"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_newpassword"
        android:layout_below="@+id/editText_newpassword"
        android:layout_marginStart="14dp"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/conf_new"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_below="@+id/editText_confirmpassword"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="47dp"
        android:text="@string/btn_save" />
</RelativeLayout>
