<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alfredtechsystems.myapplication2.admin_home">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/app_peer" />

    <Button
        android:id="@+id/button_check_for_loanees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:padding="8dp"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/app_lo" />

    <Button
        android:id="@+id/button_loners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_check_for_loanees"
        android:layout_below="@+id/button_check_for_loanees"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/button_selector"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:text="Check for Investors" />

    <Button
        android:id="@+id/button_approveloan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_loners"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/button_selector"
        android:text="@string/approve"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="8dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_studentdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_approveloan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/button_selector"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:text="@string/students" />
</RelativeLayout>
