<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/money_love_shape"
    tools:context="com.alfredtechsystems.myapplication2.Admin_login">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_peer" />

    <EditText
        android:id="@+id/editText_admin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="youremail@gmail.com"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/editText_adminpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_Admin_login"
        android:layout_width="215dp"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:background="@drawable/button_selector"
        android:text="@string/lg_btn"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>
